@@ -6,6 +6,7 @@
 * updated Validation parsing of strings into ranges
 * DelegateHash now has the ability to rebind a receiver
 * list validation now accepts validation block
+* added api validation
 
 == 0.4.2 / 2009-03-30
 
